@@ -1,4 +1,14 @@
+
 Improvements:
+
+    - A set of tests can now be partitioned and stored in testlist files to
+      be run separately. Adding the --partition <int> option along with -g will
+      cause vvtestlist.* files to be created. The tests in these files can be
+      run with vvtest by putting the testlist filename on the vvtest command
+      line, such as
+
+          $ vvtest --run-dir r0 vvtestlist.0
+          $ vvtest --run-dir r1 vvtestlist.1
 
     - Test results output can now be sent to a JSON formatted file,
       with option --json <filename>.
